# Mohit_Macpherson_portpolio

./: .env  db.sqlite3  manage.py  procfile  pyproject.toml  requirements.txt
Mohit/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: admin.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
templates/: about.html  footer.html  header.html  home.html  projects.html  signup.html
