[project]
name = "mohit"
version = "0.1.0"
description = ""
authors = [
    {name = "MohitKumar9718",email = " 218480125+MohitKumar9718@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.10.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
