[project]
name = "mohit"
version = "0.1.0"
description = ""
authors = [
    {name = "MohitKumar9718", email = "218480125+MohitKumar9718@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "python-decouple (>=3.8,<4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
